# ashley

./: Cargo.toml  NOTES.md  stroke_taper.glsl  test.txt
ashley/: Cargo.toml  NOTES.md
ashley-data-structures/: Cargo.toml
ashley-data-structures/src/: index_vec.rs  lib.rs
ashley-db/: Cargo.toml
ashley-db/src/: database.rs  db_index.rs  lib.rs  revision.rs  runtime.rs
ashley-db/tests/: simple_queries.rs
ashley-derive/: Cargo.toml
ashley-derive/src/: arena_any.rs  constraints.rs  hir_type.rs  (+3 more)
ashley-lsp/: Cargo.toml  package.json
ashley-lsp/client/src/: extension.ts
ashley-lsp/server/: Cargo.toml
ashley-lsp/server/src/: main.rs
ashley-lsp/src/: main.rs
ashley/examples/: render_sauce.rs  watcher.rs
ashley/src/: attribute.rs  builtins.rs  constant_value.rs  db.rs  diagnostic.rs  id_vec.rs  lib.rs  package_name.rs  resolver.rs  session.rs  source_file.rs
ashley/src/def/: const_expr.rs  debug.rs  diagnostic.rs  lower.rs  mod.rs  resolver.rs  scope.rs  source.rs  ty.rs
ashley/src/def/body/: diagnostic.rs  lower.rs  mod.rs
ashley/src/dialect/: mod.rs
ashley/src/dialect/base/: mod.rs  types.rs
ashley/src/dialect/gpu/: mod.rs  ops.rs
ashley/src/hir/: attr.rs  builder.rs  constant.rs  constraint.rs  ctxt.rs  decoration.rs  emit_spirv.rs  intern.rs  layout.rs  list.rs  matchers.rs  mod.rs  op.rs  print.rs  ty.rs  types.rs  visit.rs
ashley/src/hir/autogen/: builder.rs
ashley/src/hir/common/: mod.rs
ashley/src/hir/ir/: arena.rs  mod.rs  ty.rs  ty3.rs
ashley/src/hir/shader/: mod.rs
ashley/src/hir/transform/: emit_spirv.rs  link.rs  mod.rs  spirv.rs
ashley/src/ir/: builder.rs  constant.rs  emit_spirv.rs  id_map.rs  layout.rs  list.rs  mod.rs  print.rs  types.rs
ashley/src/ir/autogen/: builder.rs
ashley/src/ir/transform/: link.rs  mod.rs
ashley/src/item/: const_expr.rs  debug.rs  lower.rs  mod.rs  resolver.rs  scope.rs  source.rs  ty.rs
ashley/src/item/body/: diagnostic.rs  lower.rs  mod.rs
ashley/src/layout/: diagnostic.rs  mod.rs
ashley/src/lower/: builtin.rs  consteval.rs  mangle.rs  mod.rs  swizzle.rs  typecheck.rs  types.rs
ashley/src/package/: filesystem_resolver.rs  mod.rs  resolver.rs
ashley/src/query/: database.rs  derived.rs  input.rs  interned.rs  mod.rs
ashley/src/syntax/: ast.rs  diagnostics.rs  mod.rs  operators.rs  parse.rs  session.rs  syntax_kind.rs
ashley/src/syntax/snapshots/: ashley__syntax__tests__control_flow_statements.snap  ashley__syntax__tests__empty function.snap  ashley__syntax__tests__empty functions with arguments.snap  ashley__syntax__tests__expr_parser_tests-2.snap  ashley__syntax__tests__expr_parser_tests.snap  ashley__syntax__tests__variables.snap  ashley__syntax__tests__whitespace_tests.snap
ashley/src/tast/: attributes.rs  body.rs  builtins.rs  consteval.rs  decl.rs  def.rs  diagnostics.rs  expr.rs  item.rs  layout.rs  lower.rs  mod.rs  overload.rs  scope.rs  stmt.rs  swizzle.rs  ty.rs
ashley/src/ty/: diagnostic.rs  interner.rs  lower.rs  mod.rs  primitive.rs  ty.rs
ashley/src/ty/body/: const_eval.rs  diagnostic.rs  mod.rs
ashley/src/ty/body/lower/: mod.rs  overload.rs  swizzle.rs
ashley/src/utils/: arena_any.rs  counter.rs  dyn_eq.rs  field_layout.rs  intern.rs  interner.rs  memory_layout.rs  mod.rs  typed_vec.rs
ashley/tests/: lower.rs  query.rs  sourcegen.rs  syntax.rs  typecheck.rs
ashley/tests/inputs/: comp_mult.glsl  creation_by_silexars.glsl  grid_background.as  grid_background.glsl  splat.glsl  vertex_color.as  vertex_color.glsl
ashley/tests/inputs/syntax/: attributes.glsl
ashley/tests/snapshots/: syntax__syntax@grid_background.as.snap.new
codegen/: Cargo.toml
docs/: hir.adoc  hlgpu.adoc  introduction.adoc  main.adoc  modules.adoc  packages.adoc  use_cases.adoc
src/: id_vec.rs  lang.rs  lib.rs  syntax_kind.rs
(+32 files in other folders)
