[package]
name = "ashley-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.19.0"
tracing = "0.1.37"
ashley = { path = "../ashley" }
anyhow = "1.0.69"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.3.1"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
tracing-tree = "0.2.4"
tracing-tracy = "0.10.4"