[package]
name = "ashley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.1"
codespan-reporting = "0.11.1"
indexmap = "1.9"
logos = "0.12.1"
once_cell = "1.16"
rowan = "0.15.10"
serde = { version = "1.0", features = ["derive"], optional = true }
smol_str = "0.1.23"
thiserror = "1.0.37"
tracing = "0.1.37"
typed-arena = "2.0.1"
parking_lot = "0.12.1"
id-arena = "2.2.1"
slotmap = "1.0.6"
fxhash = "0.2.1"
ashley-derive = { path = "../ashley-derive" }
inventory = "0.3.2"
html-escape = "0.2.12"
ordered-float = "3.4.0"
smallvec = "1.10.0"
spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
rspirv = "0.11.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
insta = { version = "1.21.0", features = ["yaml", "glob"] }

