[package]
name = "ashley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = { git = "https://github.com/ennis/codespan", branch = "unsized_files" }
indexmap = "1.9"
logos = "0.12.1"
once_cell = "1.16"
rowan = "0.15.10"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.37"
tracing = "0.1.37"
parking_lot = "0.12.1"
id-arena = "2.2.1"
slotmap = "1.0.6"
fxhash = "0.2.1"
ashley-derive = { path = "../ashley-derive" }
ashley-data-structures = { path = "../ashley-data-structures" }
ashley-db = { path = "../ashley-db" }
ordered-float = "3.4.0"
smallvec = "1.10.0"
spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
rspirv = "0.11.0"
anyhow = "1.0.69"
bitflags = "2.2.1"
bytemuck = {version="1.13.1", features=["derive"]}
url = "2.3.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
insta = { version = "1.21.0", features = ["yaml", "glob"] }
spirv-tools = { version = "0.9.0", features = ["use-installed-tools"] }
wgpu = "0.16.0"
winit = "0.28.5"
env_logger = "0.10.0"
pollster = "0.3.0"
image = "0.24.6"